<resources>
    <string name="app_name">BusinessCard</string>
    <string name="learneasy">LearnEasy</string>
    <string name="language_center">Language Center</string>
    <string name="update_how_you_learn_languages">Update how you learn languages!</string>
    <string name="oak_road_12_london_uk">Oak Road 12 London, UK</string>
    <string name="_44_20_7645_0478">+44-20-7645-0478</string>
    <string name="www_learneasy_com">www.learneasy.com</string>
</resources>
